# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  gendiff.cast  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: ci.yml  hexlet-check.yml
.github/workflows/.github/workflows/: pyci.yml
gendiff/: __init__.py  __main__.py  cli.py  gendiff.py
gendiff/formatters/: format_identifier.py  json_formatter.py  plain.py  stylish.py
gendiff/recordings/: gendiff.cast  gendiff_4.cast  gendiff_stage1_2.cast  gendiff_stage5_6.cast  gendiff_stage7.cast  gendiff_stage8.cast  gendiff_stage9.cast
gendiff/scripts/: __init__.py  cli.py  find_diff.py  generate_diff.py  parser.py
gendiff/tests/: test_cli.py  test_find_diff.py  test_format_identifier.py  test_gendiff.py  test_generate_diff.py  test_json_formatter.py  test_parser.py  test_plain.py  yaml_parser.py
gendiff/tests/test_data/: result_stylish.txt
gendiff/tests/tests/: test_yaml.py
hexlet_code/: __init__.py
hexlet_code.egg-info/: PKG-INFO
hexlet_code/data/: second_file.txt
hexlet_code/scripts/: gendiff.py
tests/: test_cli.py  test_format_identifier.py  test_gendiff.py
tests/fixtures/: result_stylish.txt
tests/test_data/: filepath1.json
tests/tests/: test_yaml.py
tests/tests/parsers/: yaml_parser.py
