[project]
name = "hexlet-code"
version = "0.1.0"
description = "It's tool to compare two configuration files and show differences."
authors = [
    { name = "vlrkors", email = "vlrkors@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.11.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[project.scripts]
gendiff = "gendiff.cli:main"

